# video-use-zh

./: README.md  SKILL.md  install.md  pyproject.toml
helpers/: pack_transcripts.py  render.py  transcribe.py  transcribe_batch.py
